@@ -3,17 +3,100 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>community.flock.wirespec.example.maven</groupId>
-        <artifactId>examples</artifactId>
-        <version>0.0.0-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.5.10</version>
+        <relativePath/>
     </parent>
 
+    <groupId>community.flock.wirespec.example.maven</groupId>
     <artifactId>maven-preprocessor</artifactId>
+    <version>0.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
         <module>java-example</module>
         <module>kotlin-example</module>
     </modules>
+
+    <properties>
+        <java.version>21</java.version>
+        <kotlin-openapi-bindings.version>0.0.24</kotlin-openapi-bindings.version>
+        <kotlin.version>2.0.20</kotlin.version>
+        <sortpom-maven-plugin.version>3.2.0</sortpom-maven-plugin.version>
+        <wirespec.version>0.0.0-SNAPSHOT</wirespec.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>community.flock.wirespec</groupId>
+                <artifactId>bom</artifactId>
+                <version>${wirespec.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>community.flock.kotlinx.openapi.bindings</groupId>
+                <artifactId>kotlin-openapi-bindings-jvm</artifactId>
+                <version>${kotlin-openapi-bindings.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>community.flock.wirespec.plugin.maven</groupId>
+                    <artifactId>wirespec-maven-plugin</artifactId>
+                    <version>${wirespec.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.jetbrains.kotlin</groupId>
+                    <artifactId>kotlin-maven-plugin</artifactId>
+                    <configuration>
+                        <args>
+                            <arg>-Xjsr305=strict</arg>
+                        </args>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <configuration>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
+                        <compilerArgs>--enable-preview</compilerArgs>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>com.github.ekryd.sortpom</groupId>
+                <artifactId>sortpom-maven-plugin</artifactId>
+                <version>${sortpom-maven-plugin.version}</version>
+                <configuration>
+                    <predefinedSortOrder>custom_1</predefinedSortOrder>
+                    <lineSeparator>\n</lineSeparator>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <sortProperties>true</sortProperties>
+                    <sortDependencies>scope</sortDependencies>
+                    <nrOfIndentSpace>4</nrOfIndentSpace>
+                    <expandEmptyElements>false</expandEmptyElements>
+                    <createBackupFile>false</createBackupFile>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>sort</goal>
+                        </goals>
+                        <phase>verify</phase>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
